# winter-git

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  bugs.md  counts.csv  counts_2.csv  counts_with_metatags.csv  data.csv  data.py  data_220306.csv  data_220308.csv  data_with_metatags.csv  datascience.md  instructions.md  metatags.py  metatags_breakdown.csv  metatags_breakdown.numbers  notes.md  pyproject.toml  requirements.txt  tags.csv  tags_dropped.csv  tags_grouped_as_other.csv  tags_in_graph.html  tags_in_graph.md  tags_table_metatag_index.csv  tags_table_tag_index.csv  unique_tags.csv  utils.py  visualize_graph.py  winter-data.numbers
assets/: styles.css
data/exploratory/: counts_with_metatags.csv
data/old/: counts_220308.csv
data/winter-data.numbers/Metadata/: Properties.plist
old/: tag_counts.csv
winter-data 2.numbers/Metadata/: DocumentIdentifier
winter-data.numbers/Metadata/: BuildVersionHistory.plist  Properties.plist
